Fix up theme for too much content.

--- a/assets/css/theme/18f.css
+++ b/assets/css/theme/18f.css
@@ -44,9 +44,9 @@ body {
 }
 
 header {
-  margin: 20px;
 }
 header a {
+  font-size: 1rem;
   margin: 20px;
   color: #4ABAF7;
   text-decoration: none;
@@ -57,6 +57,14 @@ header a:hover {
 }
 
 .reveal {
+}
+
+.reveal .slides {
+  height: 100% !important;
+}
+
+.reveal .present {
+  top: 0 !important;
 }
 
 ::selection {
